src/plugins/platforms/cocoa/qnsview_keys.mm
@@ -94,7 +94,10 @@ static bool isSpecialKey(const QString &text)
 
                     qCDebug(lcQpaKeys) << "Interpreting key event for focus object" << focusObject;
                     m_currentlyInterpretedKeyEvent = nsevent;
-                    [self interpretKeyEvents:@[nsevent]];
+                    if (![self.inputContext handleEvent:nsevent]) {
+                        qCDebug(lcQpaKeys) << "Input context did not consume event";
+                        m_sendKeyEvent = true;
+                    }
                     m_currentlyInterpretedKeyEvent = 0;
                     didInterpretKeyEvent = true;
 
